# multiprocessing-messaging

./: README.md  pyproject.toml
src/mpCommunication/: mp_communication.py
